Use div to persent the user data like table. And use some css to make page colorful.

--- a/Views/UserManagement/Index.cshtml
+++ b/Views/UserManagement/Index.cshtml
@@ -11,15 +11,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script src="js/index.js"></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div id="app">
-        User List:
-        <ol>
-            <li v-for="user in users">
-                {{ user.name }} {{ user.birthday }}
-            </li>
-        </ol>
+        User List:<br/>
+        <div><div class="header cell w80">Name</div><div class="header cell w160">Birthday</div><div class="header cell w240">CreateTime</div></div>
+        <div v-for="user in users">
+            <div class="cell w80">{{ user.name }}</div><div class="cell w160">{{ user.birthday }}</div><div class="cell w240">{{ user.createTime }}</div>
+        </div>
     </div>
 </body>
 </html>
