Add user query function.

--- a/Views/UserManagement/Index.cshtml
+++ b/Views/UserManagement/Index.cshtml
@@ -16,9 +16,10 @@
 <body>
     <div id="app">
         User List:<br/>
-        <div><div class="header cell w80">Name</div><div class="header cell w160">Birthday</div><div class="header cell w240">CreateTime</div></div>
+        Query By ID:<input v-model="ID" v-on:keyup="QueryUser"><br/>
+        <div><div class="header cell w20">ID</div><div class="header cell w80">Name</div><div class="header cell w160">Birthday</div><div class="header cell w240">CreateTime</div></div>
         <div v-for="user in users">
-            <div class="cell w80">{{ user.name }}</div><div class="cell w160">{{ user.birthday }}</div><div class="cell w240">{{ user.createTime }}</div>
+            <div class="cell w20">{{ user.id }}</div><div class="cell w80">{{ user.name }}</div><div class="cell w160">{{ user.birthday }}</div><div class="cell w240">{{ user.createTime }}</div>
         </div>
     </div>
 </body>
